# plane-sweep

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  bacon.toml  cliff.toml  deny.toml  index.html  plane-sweep-82d4d368129e92e0.js
.cargo/: mutatnts.toml
.github/workflows/: benchmark.yml  changelog.yml  deploy.yml  pages.yml  release.yml  rust.yml
assets/: manifest.json  sw.js
benchmark/: Cargo.toml
benchmark/benches/: brute_force.rs  sweep.rs
benchmark/src/: main.rs
crates/algorithm/brute-force/: Cargo.toml
crates/algorithm/brute-force/src/: lib.rs  ui.rs
crates/algorithm/brute-force/tests/: calculate_steps.rs
crates/algorithm/brute-force/tests/fuzzer/: main.rs
crates/algorithm/sweep/: Cargo.toml
crates/algorithm/sweep-fast/: Cargo.toml
crates/algorithm/sweep-fast/src/: lib.rs
crates/algorithm/sweep-utils/: Cargo.toml
crates/algorithm/sweep-utils/src/: event.rs  lib.rs
crates/algorithm/sweep-utils/src/status/: mod.rs  node.rs
crates/algorithm/sweep-utils/src/ui/: events_view.rs  mod.rs  set_view.rs  status_view.rs
crates/algorithm/sweep-with-lines/: Cargo.toml
crates/algorithm/sweep-with-lines/src/: lib.rs  step.rs
crates/algorithm/sweep-with-lines/src/ui/: code_view.rs  mod.rs
crates/algorithm/sweep/src/: event.rs  lib.rs  status.rs  step.rs  ui.rs
crates/algorithm/sweep/src/status/: mod.rs  node.rs
crates/algorithm/sweep/src/ui/: code_view.rs  events_view.rs  mod.rs  set_view.rs  status_view.rs
crates/algorithm/sweep/tests/: .gitignore  calculate_steps.rs
crates/algorithm/sweep/tests/fuzzer/: main.rs
crates/common/: Cargo.toml
crates/common/src/: intersection.rs  lib.rs  segment.rs  test.rs  ui.rs
crates/common/src/math/: mod.rs
crates/common/src/math/cartesian/: coordinate.rs  line.rs  mod.rs
crates/common/src/math/homogeneous/: coord.rs  line.rs  mod.rs
crates/common/tests/: cartesian.rs  cross_product.rs  dot_product.rs  homogeneous.rs  segment.rs
crates/plane-sweep/: Cargo.toml
crates/plane-sweep/src/: main.rs
crates/ui/app/: Cargo.toml
crates/ui/app/src/: lib.rs
crates/ui/controller/: Cargo.toml
crates/ui/controller/src/: lib.rs
crates/ui/intersection_table/: Cargo.toml
crates/ui/intersection_table/src/: lib.rs
crates/ui/segment_plotter/: Cargo.toml
crates/ui/segment_plotter/src/: lib.rs
crates/ui/segment_table/: Cargo.toml
crates/ui/segment_table/src/: lib.rs
crates/ui/third_party_licenses/: Cargo.toml  about.hbs  about.toml  build.rs
crates/ui/third_party_licenses/src/: lib.rs
crates/ui/tracing-gui/: Cargo.toml
crates/ui/tracing-gui/src/: lib.rs
crates/workspace-hack/: Cargo.toml
fuzzer/: .gitignore  Cargo.toml
fuzzer/tests/sweep_and_brute/: main.rs
