[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
common = {path = "../crates/common"}
sweep = {path = "../crates/algorithm/sweep"}
brute-force = {path = "../crates/algorithm/brute-force"}
fastrand = "2.3.0"
divan = "0.1.21"


[lints]

[profile.release]
lto = "fat"


[[bench]]
name = "brute_force"
harness = false


[[bench]]
name = "sweep"
harness = false
