[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
sweep-fast = {path = "../crates/algorithm/sweep-fast"}
fastrand = "2.3.0"
common = {path = "../crates/common"}

[dev-dependencies]
common = {path = "../crates/common"}
sweep-fast = {path = "../crates/algorithm/sweep-fast"}
brute-force = {path = "../crates/algorithm/brute-force"}
fastrand = "2.3.0"
divan = "0.1.21"


[lints]

[profile.release]
lto = "fat"
dev = "full"


[[bench]]
name = "brute_force"
harness = false


[[bench]]
name = "sweep"
harness = false
