[package]
name = "fuzzer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bolero = "0.13.4"
brute-force = { version = "1.0.0", path = "../crates/algorithm/brute-force" }
common = { version = "1.0.0", path = "../crates/common" }
sweep = { version = "1.0.0", path = "../crates/algorithm/sweep" }


[dev-dependencies]
bolero = "0.13.4"
googletest = "0.14.2"

[[test]]
name = "sweep_and_brute"
harness = false

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1
debug = "full"
