[package]
name = "common"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
default = ["test"]
serde = ["dep:serde", "typed-index-collections/serde"]
test = ["dep:googletest"]

[dependencies]
eframe = { version = "0.31.1", default-features = false }
float-cmp = "0.10.0"
googletest = { version = "*", optional = true }
ordered-float = "5.0.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }
snafu = { version = "0.8.6", features = ["rust_1_81"] }
tracing = "0.1.41"
typed-index-collections = "3.3.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
googletest = "0.14.1"
static_assertions = "1.1.0"

[lints]
workspace = true
