[package]
name = "common"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
serde = [
    "dep:serde",
    "typed-index-collections/serde",
    "fraction/with-serde-support",
    "smallvec/serde",
]
ui = ["dep:eframe"]
big = []
[dependencies]
eframe = { version = "0.31.1", default-features = false, optional = true }
fraction = { version = "0.15.3", default-features = false, features = ["with-dynaint", "with-approx"] }
serde = { version = "1.0.219", features = ["derive"], optional = true }
smallvec = { version = "2.0.0-alpha.11", features = ["std"] }
snafu = { version = "0.8.6", features = ["rust_1_81"] }
tracing = "0.1.41"
typed-index-collections = "3.3.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
googletest = "0.14.1"
rstest = { version = "0.25.0", default-features = false }
static_assertions = "1.1.0"

[lints]
workspace = true
