[package]
name = "plane-sweep"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
default = ["persistence", "accesskit", "mimalloc", "x11", "wayland"]
"x11" = ["eframe/x11"]
"wayland" = ["eframe/wayland"]
"persistence" = ["eframe/persistence", "app/persistence", "app/serde"]
"accesskit" = ["eframe/accesskit", "app/accesskit"]
"mimalloc" = ["dep:mimalloc"]

[dependencies]
app = { path = "../ui/app" }
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
better-panic = "0.3.0"
mimalloc = { version = "0.1.47", optional = true }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"              # to access the DOM (to hide the loading text)

[lints]
workspace = true
