[package]
name = "brute-force"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
serde = [
    "dep:serde",
    "common/serde",
    "controller/serde",
    "intersection_table/serde",
    "segment_plotter/serde",
    "segment_table/serde",
]

[dependencies]
auto_enums = { version = "0.8.7", default-features = false }
common = { path = "../../common" }
controller = { path = "../../ui/controller" }
eframe = { version = "0.31.1", default-features = false }
egui_extras = { version = "0.31.1", default-features = false }
intersection_table = { path = "../../ui/intersection_table" }
segment_plotter = { path = "../../ui/segment_plotter" }
segment_table = { path = "../../ui/segment_table" }
serde = { version = "1.0.219", features = ["derive"], optional = true }
tracing = "0.1.41"
web-time = "1.1.0"
workspace-hack = { path = "../../workspace-hack" }

[dev-dependencies]
common = { path = "../../common", features = ["test"] }
googletest = "0.14.1"

[lints]
workspace = true
