[package]
name = "sweep-fast"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
common = { version = "1.0.0", path = "../../common" }
itertools = "0.14.0"
smallvec = { version = "2.0.0-alpha.11", features = ["std"] }
sweep-utils = { version = "1.0.0", path = "../sweep-utils" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[lints]
workspace = true
