[package]
name = "sweep-with-lines"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
serde = [
    "dep:serde",
    "common/serde",
    "segment_plotter?/serde",
    "segment_table?/serde",
    "intersection_table?/serde",
    "sweep-utils/serde",
]
ui = [
    "dep:controller",
    "dep:eframe",
    "dep:intersection_table",
    "dep:segment_plotter",
    "dep:segment_table",
    "common/ui",
]

[dependencies]
bon = { version = "3.6.4", default-features = false }
common = { path = "../../common" }
controller = { path = "../../ui/controller", optional = true }
eframe = { version = "0.31.1", default-features = false, optional = true }
indexmap = "2.10.0"
intersection_table = { path = "../../ui/intersection_table", optional = true }
itertools = "0.14.0"
segment_plotter = { path = "../../ui/segment_plotter", optional = true }
segment_table = { path = "../../ui/segment_table", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
sweep-utils = { version = "1.0.0", path = "../sweep-utils", features = ["ui"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[lints]
workspace = true
