[package]
name = "sweep"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
serde = [
    "dep:serde",
    "ordered-float/serde",
    "common/serde",
    "segment_plotter/serde",
    "segment_table/serde",
    "intersection_table/serde",
]

[dependencies]
bon = { version = "3.6.4", default-features = false }
common = { path = "../../common" }
controller = { path = "../../ui/controller" }
eframe = { version = "0.31.1", default-features = false }
egui_extras = { version = "0.31.1", default-features = false }
intersection_table = { path = "../../ui/intersection_table" }
itertools = "0.14.0"
ordered-float = "5.0.0"
segment_plotter = { path = "../../ui/segment_plotter" }
segment_table = { path = "../../ui/segment_table" }
serde = { version = "1.0.219", features = ["derive"], optional = true }
slotmap = "1.0.7"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
googletest = "0.14.1"

[lints]
workspace = true
