[package]
name = "sweep"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
serde = [
    "dep:serde",
    "ordered-float/serde",
    "common/serde",
    "segment_plotter/serde",
    "segment_table/serde",
    "intersection_table/serde",
]

[dependencies]
bon = { version = "3.6.4", default-features = false }
common = { path = "../../common" }
controller = { path = "../../ui/controller" }
eframe = { version = "0.31.1", default-features = false }
egui_extras = { version = "0.31.1", default-features = false }
intersection_table = { path = "../../ui/intersection_table" }
itertools = "0.14.0"
ordered-float = "5.0.0"
segment_plotter = { path = "../../ui/segment_plotter" }
segment_table = { path = "../../ui/segment_table" }
serde = { version = "1.0.219", features = ["derive"], optional = true }
slotmap = "1.0.7"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
bolero = "0.13.3"
bolero-generator = "0.13.4"
googletest = "0.14.1"
mutants = "0.0.3"
rstest = { version = "0.25.0", default-features = false }

[lints]
workspace = true

[[test]]
name = "fuzzer"
harness = false
