[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
"persistence" = ["serde"]
"accesskit" = []
serde = ["dep:serde", "brute-force/serde", "sweep/serde"]
"x11" = []
"wayland" = []
"mimalloc" = []

[dependencies]
brute-force = { path = "../../algorithm/brute-force" }
common = { path = "../../common" }
eframe = { version = "0.31.1", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
sweep = { path = "../../algorithm/sweep" }
third_party_licenses = { path = "../third_party_licenses" }
tracing-gui = { path = "../tracing-gui" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[lints]
workspace = true

[dev-dependencies]
mutants = "0.0.3"
