[package]
name = "controller"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
serde = ["dep:serde", "common/serde"]

[dependencies]
common = { path = "../../common" }
eframe = { version = "0.31.1", default-features = false }
serde = { version = "1.0.219", features = ["derive"], optional = true }
tracing = "0.1.41"
workspace-hack = { path = "../../workspace-hack" }
[lints]
workspace = true
