[package]
name = "intersection_table"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
common = { version = "0.1.0", path = "../../common" }
eframe = { version = "0.31.1", default-features = false }
egui_extras = { version = "0.31.1", default-features = false }
serde = { version = "1.0.219", features = ["derive"], optional = true }
tracing = "0.1.41"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[lints]
workspace = true
