[package]
name = "segment_plotter"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
serde = ["dep:serde", "common/serde", "egui_plot/serde"]

[dependencies]
common = { path = "../../common", features = ["ui"] }
eframe = { version = "0.31.1", default-features = false }
egui_plot = "0.32.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[lints]
workspace = true
