[package]
name = "segment_table"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
serde = ["dep:serde", "common/serde", "egui_extras/serde"]

[dependencies]
common = { path = "../../common", features = ["ui"] }
eframe = { version = "0.31.1", default-features = false }
egui-notify = "0.19.0"
egui_extras = { version = "0.31.1", default-features = false }
serde = { version = "1.0.219", features = ["derive"], optional = true }
tracing = "0.1.41"

[lints]
workspace = true
