[package]
name = "third_party_licenses"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
"persistence" = []
"acceskit" = []
"accesskit" = []
serde = []
"x11" = []
"wayland" = []
"mimalloc" = []
"warnings" = []

[dependencies]
common = { path = "../../common" }
eframe = { version = "0.31.1", default-features = false }
egui_commonmark = { version = "0.20.0", features = ["macros"] }
workspace-hack = { path = "../../workspace-hack" }

[lints]
workspace = true
