[package]
name = "tracing-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
common = { path = "../../common", features = ["ui"] }
eframe = { version = "0.31.1", default-features = false }
# Using a Fork for up to date dependencies
egui_tracing = { git = "https://github.com/tanculau/egui_tracing", branch = "dev" }
#egui_tracing = {path = "../../../../egui_tracing/egui-tracing"}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-wasm = "0.2.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui_tracing = { git = "https://github.com/tanculau/egui_tracing", branch = "dev", features = ["wasmbind"] }

[lints]
workspace = true

